@@ -1,3 +1,10 @@
+2007-04-15  Alex Graveley  <alex@beatniksoftware.com>
+
+	* compzilla/src/compzillaControl.cpp (InitWindowState): If we're
+	the window manager, add all existing windows.  Init Shape
+	extension.  Remove DEMO_HACK.
+	(WindowDamaged): Move XDamageNotify handler to here.
+
 2007-04-14  Chris Toshok  <toshok@ximian.com>
 
 	* compzilla/src/compzillaRenderingContext.cpp (Redraw): fix the
